docs; updates CSS file
assignment completed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <hr>
     <div class="profile">
         <h2 class=" profile-heading">Your profiles</h2>
-        <p  class=" profile-heading">See how your different profiles appear in Google<br>services</p>
+        <p  class=" profile-subtext">See how your different profiles appear in Google<br>services</p>
         <img class="img1" src="profile1.png"> 
         <img class="img2" src="profile.jpg"> 
         <hr>
@@ -27,9 +27,9 @@
             <img src="https://source.unsplash.com/1600x1000/?nature" class="box-img" alt="">
             <p></p>
             <div class="box-body">
-                <p> <img src="lock.png" class="lock">SUBSCRIBE TO ANY PLAN</p>
+                <p class="sub-text"> <img src="lock.png" class="lock">SUBSCRIBE TO ANY PLAN</p>
                 <h4>Get more features in Google<br>Photos</h4>
-            <p>Bring your favourite moments to life with more Google Photos editing tools for Android and iOS, including Magic Eraser Subject to eligibility.</p>
+            <p class="sub-text">Bring your favourite moments to life with more Google Photos editing tools for Android and iOS, including Magic Eraser Subject to eligibility.</p>
             <button class="view-btn"> View Details</button>
     
             </div>
